Fix image paths in JavaScript

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 <section id="our-story">
     <h2>Cerita Kami</h2>
     <div class="content">
-        <img src="joki.jpg" alt="Cerita Kami" class="responsive-img">
+        <img src="/images/joki.jpg" alt="Cerita Kami" class="responsive-img">
         <p>
             Pada tahun 2025, Joki_Kitastore lahir dari sebuah ide sederhana: membantu para gamer mencapai tujuan mereka di dunia game dengan cara yang aman, cepat, dan terpercaya. 
             Kami melihat semakin banyak gamer yang ingin meningkatkan peringkat, menukarkan kode hadiah, atau mendapatkan pengalaman bermain yang lebih baik, tetapi merasa kesulitan karena waktu atau tantangan tertentu.
