--- a/joki.html
+++ b/joki.html
@@ -119,34 +119,34 @@
 
         <!-- MASTER -->
         <div class="rank-card" onclick="selectRank('MASTER', 3000)">
-            <img src="Master.webp" alt="MASTER" class="rank-image">
+            <img src="/images/Master.webp" alt="MASTER" class="rank-image">
             <div class="rank-title">MASTER</div>
             <div class="rank-price">Rp 3.000</div>
         </div>
 
         <!-- Existing Ranks -->
         <div class="rank-card" onclick="selectRank('GRANDMASTER', 4000)">
-            <img src="Grandmaster.jfif" alt="GRANDMASTER" class="rank-image">
+            <img src="/images/Grandmaster.jfif" alt="GRANDMASTER" class="rank-image">
             <div class="rank-title">GRANDMASTER</div>
             <div class="rank-price">Rp 4.000</div>
         </div>
         <div class="rank-card" onclick="selectRank('EPIC', 5500)">
-            <img src="epic.jpg" alt="EPIC" class="rank-image">
+            <img src="/images/epic.jpg" alt="EPIC" class="rank-image">
             <div class="rank-title">EPIC</div>
             <div class="rank-price">Rp 5.500</div>
         </div>
         <div class="rank-card" onclick="selectRank('LEGEND', 6500)">
-            <img src="Legend.jfif" alt="LEGEND" class="rank-image">
+            <img src="/images/Legend.jfif" alt="LEGEND" class="rank-image">
             <div class="rank-title">LEGEND</div>
             <div class="rank-price">Rp 6.500</div>
         </div>
         <div class="rank-card" onclick="selectRank('MYTHIC', 8500)">
-            <img src="mitik.jfif" alt="MYTHIC" class="rank-image">
+            <img src="/images/mythic.jfif" alt="MYTHIC" class="rank-image">
             <div class="rank-title">MYTHIC</div>
             <div class="rank-price">Rp 8.500</div>
         </div>
         <div class="rank-card" onclick="selectRank('MYTHIC HONOR', 12000)">
-            <img src="honor.jfif" alt="MYTHIC HONOR" class="rank-image">
+            <img src="/images/honor.jfif" alt="MYTHIC HONOR" class="rank-image">
             <div class="rank-title">MYTHIC HONOR</div>
             <div class="rank-price">Rp 12.000</div>
         </div>
