--- a/pembayaran.html
+++ b/pembayaran.html
@@ -108,15 +108,15 @@
       <h2 class="text-xl font-bold mb-4">3. Metode Pembayaran</h2>
       <div id="paymentMethods">
         <div class="payment-method" onclick="selectPaymentMethod(this, 'Dana', 200)">
-          <img src="dana.jfif" alt="Dana">
+          <img src="/images/dana.jfif" alt="Dana">
           <span>Dana</span>
         </div>
         <div class="payment-method" onclick="selectPaymentMethod(this, 'Gopay', 200)">
-          <img src="gopay.jfif" alt="Gopay">
+          <img src="/images/gopay.jfif" alt="Gopay">
           <span>Gopay</span>
         </div>
         <div class="payment-method" onclick="selectPaymentMethod(this, 'Shopee Pay', 250)">
-          <img src="shope.webp" alt="Shopee Pay">
+          <img src="/images/shope.webp" alt="Shopee Pay">
           <span>Shopee Pay</span>
         </div>
       </div>
@@ -278,7 +278,7 @@
       togglePassword.textContent = type === "password" ? "👁️" : "🙈";
     });
   </script>
-  
+
 </body>
 
 </html>
