--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +11,18 @@
             padding: 0;
             box-sizing: border-box;
         }
-        html, body {
+
+        html,
+        body {
             width: 100%;
             overflow-x: hidden;
             font-family: Arial, sans-serif;
-            background: url('joki.jpg') no-repeat center center fixed;
+            background: url('/images/joki.jpg') no-repeat center center fixed;
             background-size: cover;
             color: white;
             text-align: center;
         }
+
         header {
             background-color: rgba(22, 19, 19, 0.95);
             padding: 20px;
@@ -26,6 +30,7 @@
             font-weight: bold;
             width: 100%;
         }
+
         nav {
             background-color: rgba(22, 19, 19, 0.95);
             padding: 10px;
@@ -34,18 +39,22 @@
             justify-content: center;
             gap: 20px;
         }
+
         nav a {
             color: white;
             text-decoration: none;
             transition: color 0.3s ease;
             padding: 10px;
         }
+
         nav a:hover {
             color: #ff9800;
         }
+
         main {
             width: 100%;
         }
+
         .info-container {
             width: 100%;
             display: flex;
@@ -54,6 +63,7 @@
             gap: 30px;
             margin-top: 30px;
         }
+
         .section-box {
             background-color: rgba(22, 19, 19, 0.95);
             width: 100%;
@@ -61,6 +71,7 @@
             text-align: center;
             margin-bottom: 20px;
         }
+
         .btn-order {
             display: inline-block;
             background-color: #ff9800;
@@ -71,19 +82,23 @@
             border-radius: 5px;
             transition: background 0.3s ease;
         }
+
         .btn-order:hover {
             background-color: #e68900;
         }
+
         .contact-info a {
             color: #ff9800;
             text-decoration: none;
             font-weight: bold;
             font-size: 18px;
         }
+
         .contact-info p {
             font-size: 18px;
             font-weight: bold;
         }
+
         .copyright {
             background-color: rgba(22, 19, 19, 0.95);
             padding: 15px;
@@ -91,6 +106,7 @@
             width: 100%;
             margin-top: 30px;
         }
+
         @media (max-width: 768px) {
             .section-box {
                 padding: 30px 5%;
@@ -98,6 +114,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         JOKI KITA STORE
@@ -112,8 +129,8 @@
             <section id="layanan" class="section-box">
                 <h2>Layanan</h2>
                 <p>Ingin naik peringkat dengan cepat dan aman? Layanan joki kami hadir
-                   untuk membantu Anda mencapai level tertinggi dalam game favorit Anda.
-                   Dengan kecepatan, keamanan, dan harga terbaik, kami siap melayani Anda 24/7!</p>
+                    untuk membantu Anda mencapai level tertinggi dalam game favorit Anda.
+                    Dengan kecepatan, keamanan, dan harga terbaik, kami siap melayani Anda 24/7!</p>
             </section>
             <section class="section-box">
                 <h2>Joki Game PC</h2>
@@ -132,4 +149,5 @@
         &copy; 2025 KITA STORE. Semua Hak Dilindungi.
     </div>
 </body>
+
 </html>
